# jd-stock-saas

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  celerybeat-schedule  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_logo_url.py  0003_add_security_models.py  0004_add_password_auth.py  0005_schema_enrichment_phase1.py  0006_add_user_sessions.py  0007_data_analytics.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: admin.py  alerts.py  auth.py  news.py  portfolio.py  router.py  (+5 more)
backend/app/core/: audit.py  audit_v2.py  config.py  database.py  deps.py  exceptions.py  logging.py  meta.py  oauth.py  rate_limit.py  redis.py  rowstamp.py  security.py  security_headers.py  simulator.py  status_machine.py  sync_db.py
backend/app/data/: seed.py  seed_demo.py  tickers.py
backend/app/models/: __init__.py  alert.py  audit_log.py  classification.py  news.py  object_history.py  portfolio.py  price.py  session.py  stock.py  stock_attribute.py  stock_status_history.py  user.py  watchlist.py
backend/app/schemas/: alert.py  analytics.py  auth.py  enrichment.py  news.py  portfolio.py  screener.py  stock.py  user.py  watchlist.py
backend/app/scrapers/: base.py  ngxpulse.py  yahoo.py
backend/app/services/: analytics_service.py  portfolio_service.py  stock_service.py  user_service.py
backend/app/tasks/: alerts.py  celery_app.py  news.py  prices.py
backend/tests/: conftest.py  test_config.py  test_security.py  test_stocks_api.py  test_tickers.py
(+62 files in other folders)
