[project]
name = "ngx-stock-saas-backend"
version = "0.1.0"
description = "FastAPI backend for the NGX (Nigerian Exchange) stock-market SaaS"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "email-validator>=2.2",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "redis>=5.1",
    "celery>=5.4",
    "authlib>=1.3",
    "httpx>=0.27",
    "python-jose[cryptography]>=3.3",
    "yfinance>=0.2.40",
    "pandas>=2.2",
    "itsdangerous>=2.2",
    "python-multipart>=0.0.12",
    "slowapi>=0.1.9",
    "pyotp>=2.9",
    "qrcode[pil]>=7.4",
    "bcrypt>=4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "aiosqlite>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
